# smarter-dev

./: .augmentrules  .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bot  Dockerfile.web  Dockerfile.web.slim  EXISTING_LANDING_PAGE.md  FEATURES.md  FUNCTIONALITY_COMPLIANCE_STATUS.md  README.md  README_MENTION_AGENT_TESTS.md  SESSION_4_VALIDATION_REPORT.md  alembic.ini  app.development.yaml  app.yaml  bootstrap_api_key.py  claude-latest-session.md  compose.yaml  coverage.xml  create_animated_gif.py  debug_campaigns.py  docker-compose.yml  generate_discord_assets.py  generate_discord_icon.py  generate_discord_icon_christmas.py  generate_email_bg.py  generate_sudo_og.py  init.sql  landing-page.html  logo-icon.afdesign  main.py  pyproject.toml  run_migration.py  smarter_dev.db  test_mention_agent.py  test_runner_check.py  (+3 more)
alembic/: alembic.ini  env.py
bot/: README.md  __init__.py  __main__.py  api_client.py  api_models.py  api_sync.py  bot.py  example.py
challenge-scripts/: challenge-1.py  challenge-2.py  challenge-3.py  input-c.txt  solution-1.py  solution-3.py  test.py
database_backup/: alembic_version.txt  data_backup.json
docs/: CLAUDE.md  DEPLOYMENT.md  LLM_CONFIG.md  MENTION_AGENT_TESTS.md  MISSING_FUNCTIONALITY_ANALYSIS.md  README.md  SESSION_4_VALIDATION_REPORT.md  bot-testing-strategy.md  campaign-challenges-implementation-plan.md  campaign-database-schema-plan.md  patterns-of-practice-research.md  patterns-of-practice-urls-needed.md  session-2-database.md  session-4-services.md  session-5-bot.md  session-8-production.md
(+1459 files in other folders)
