[project]
name = "smarter-dev"
version = "0.1.0"
description = "Smarter Dev website and Discord bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles",
    "bcrypt",
    "hikari",
    "hikari-lightbulb",
    "httpx",
    "itsdangerous",
    "jinja2",
    "passlib",
    "python-multipart",
    "sqlalchemy>=2.0.38",
    "starlette",
    "starlette-testclient>=0.4.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
