[project]
name = "smarter-dev"
version = "0.1.0"
description = "Smarter Dev website and Discord bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles",
    "alembic>=1.15.2",
    "bcrypt",
    "fastapi>=0.115.12",
    "hikari",
    "hikari-lightbulb",
    "httpx",
    "itsdangerous",
    "jinja2",
    "passlib",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-multipart",
    "sqlalchemy>=2.0.38",
    "starlette",
    "starlette-testclient>=0.4.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
