[project]
name = "smarter-dev-site"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "starlette>=0.47.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
gif-creation = [
    "pillow>=11.3.0",
]
